@@ -1,2 +1,4 @@
 {{$NEXT}}
   - created Catmandu::I18N
+  - created Catmandu::Fix::i18n
+  - added tests
